--- a/src/components/Skills/Skills.css
+++ b/src/components/Skills/Skills.css
@@ -41,7 +41,7 @@
     width: 18rem;
     height: 18rem;
     border-radius: 60%;
-    box-shadow: 2px 2px 5px #888888;
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px; 
     top: 2rem;
     background: white;
 }
